# info2602a2

./: .replit  pyproject.toml  wsgi.py
App/: app.py
App/templates/: home.html  signup.html
