[tool.poetry]
name = "repl_nix_info2602a2"
version = "0.1.0"
description = ""
authors = ["Replit user <<>>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask-Login = "^0.6.2"
Flask-SQLAlchemy = "^3.0.3"
Werkzeug = "^2.2.3"
click = "^8.1.3"
Flask = "^2.2.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
